--- a/layouts/shortcodes/github.html
+++ b/layouts/shortcodes/github.html
@@ -1,3 +1,3 @@
-<a href="{{ printf "%s/content%s" .Site.Params.github .Page.RelPermalink }}">
+<a href="{{ .Site.Params.github }}">
     <img src="https://img.shields.io/badge/Code-Check%20me%20on%20Github!-brightgreen" alt="Check me on Github!" title="Check me on Github!">
 </a>
