--- a/layouts/sketches/single.html
+++ b/layouts/sketches/single.html
@@ -4,16 +4,14 @@
         <style>
             html, body {
                 width: 100%;
-                border: 0;
                 padding: 0;
                 margin: 0;
             }
             main, .p5Canvas {
                 width: 100% !important;
-                height: auto !important;
-                max-width: 860px;
+                height: 100% !important;
                 display: block;
-                image-rendering: pixelated;
+                image-rendering: {{ .Page.Params.rendering | default "auto" }};
             }
         </style>
         <script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/p5.min.js"></script>
