--- a/layouts/shortcodes/ebiten-embed.html
+++ b/layouts/shortcodes/ebiten-embed.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <style>
+            html, body {
+                width: 100%;
+                height: auto !important;
+                padding: 0;
+                margin: 0;
+            }
+            main, canvas {
+                width: 100% !important;
+                height: 100% !important;
+                display: block;
+                image-rendering: {{ .Get 0 | default "auto" }};
+            }
+        </style>
         <script src="/js/wasm_exec.js"></script>
         <script>
         // Polyfill
