--- a/layouts/shortcodes/p5js-embed.html
+++ b/layouts/shortcodes/p5js-embed.html
@@ -7,7 +7,7 @@
                 padding: 0;
                 margin: 0;
             }
-            main, .p5Canvas {
+            main, canvas {
                 width: 100% !important;
                 height: 100% !important;
                 display: block;
