--- a/layouts/shortcodes/sketch.html
+++ b/layouts/shortcodes/sketch.html
@@ -13,6 +13,6 @@
         </div>
     </div>
     <div class="sketch-container">
-        <iframe id="{{ $id }}" class="sketch-iframe" sandbox="allow-scripts allow-same-origin" srcdoc="{{ .Inner | safeHTMLAttr }}"  scrolling="no" frameborder="0" onload="resize(this)" width="100%" height="480px"></iframe>
+        <iframe id="{{ $id }}" class="sketch-iframe" sandbox="allow-scripts allow-same-origin" srcdoc="{{ .Inner | safeHTMLAttr }}" onload="resize(this)" scrolling="no" frameborder="0" height="auto"></iframe>
     </div>
 </div>
